--- a/front-end/package.json
+++ b/front-end/package.json
@@ -11,7 +11,10 @@
   "jest": {
     "moduleNameMapper": {
       "\\.scss$": "<rootDir>/src/__test__/mock-asset.js"
-    }
+    },
+    "setupFiles": [
+      "<rootDir>/src/__test__/test.env.js"
+    ]
   },
   "keywords": [],
   "author": "",
