--- a/back-end/package.json
+++ b/back-end/package.json
@@ -44,6 +44,7 @@
     "babel-preset-stage-0": "^6.24.1",
     "bcrypt": "^2.0.1",
     "body-parser": "^1.18.3",
+    "cors": "^2.8.4",
     "crypto": "^1.0.1",
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
