--- a/front-end/package.json
+++ b/front-end/package.json
@@ -56,6 +56,7 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
-    "superagent": "^3.8.3"
+    "superagent": "^3.8.3",
+    "validator": "^10.3.0"
   }
 }
